Jan 26 2005  devel  Added typedef for MagickBooleanType on old IM libs
Jan 17 2005  devel  Updated ipkg spec
                    Changed configure to accept --with-linuxheaders for 
                     cross-compiling with a different kernel header path
                     than the current /lib/modules/...
Jan 13 2005 2005-01 Released 2005-01-R1.  Not the major rewrite yet, sorry,
                    pushed out for the CHIP magazine CD.  Minor bugfixes and 
                    general updates:
                     Fixed non-intel compilation bugs in previous release
                     Fixed gcc version issues that crept into previous release
                     Tweaked ipw2100 channel control to try to minimize driver 
                      errors
                     Tweaked signal/noise handlers to work with Madwifi again
                     Added Atmel-USB support (rudimentary pseudo-rfmon)
                     Tweaked configure scripts
                     Fixed alpha blending elements of gpsmap images on new 
                      image magick libs
                     Fixed label positioning code in gpsmap
                     Documentation and spelling errors fixed up
Jan 13 2005  devel  Tweaked configure.in/configure to use $(...) instead of `...`
                     to find the kernel headers since it seems to not always
                     translate correctly (Andreas 'GlaDiaC' Schneider)
Jan 11 2005  devel  Added card type 'atmel_usb' for the berlios.de atmel USB 
                     drivers with pseudo-monitor support
Jan 09 2005  devel  Minor tweak to signal/noise handlers to report the signal
                     level if noise is equal to 0.  (This fixes behavior on
                     madwifi drivers that report a signal and no noise)
Jan 03 2005  devel  Merged documentation spelling patch from Andreas Mohr
Jan 01 2005  devel  Merged gpsmap patch from Daniel Dorau to fix gpsmap alpha